fix: modal display on smaller devices

--- a/src/styles/CartModal.css
+++ b/src/styles/CartModal.css
@@ -75,5 +75,6 @@
 @media screen and (max-width: 480px) {
     .cart-modal {
         margin: 1.5rem;
+        width: 90%;
     }
 }
